# GRK_Underwater_World

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TEAM_GUIDE.md  assets.dvc  generate_heightmap.py  pdf-style.yml  project_underworld.vcxproj  project_underworld.vcxproj.filters  team-guide.qmd
.dvc/: config
assets/: .gitignore  3d.dvc  hdri.dvc  textures.dvc
assets/shaders/: caustics.frag  caustics.vert  depth.frag  depth.vert  fish.frag  fish.vert  object.frag  object.vert  screen.frag  screen.vert  seabed.frag  seabed.vert  sky.frag  sky.vert  skybox.frag  skybox.vert  spline.frag  spline.vert  terrain.frag  terrain.vert  vegetation.frag  vegetation.vert  water.frag  water_tess.tesc  water_tess.tese  water_tess.vert
assets/shaders/lib/: foam_lib.glsl  ocean_lib.glsl
docs/: PROJECT_CONTEXT.md
docs/img/: README.md
src/: main.cpp
src/core/: HeightmapLoader.cpp  HeightmapLoader.h  ModelLoader.cpp  ModelLoader.h
src/player/: CameraShake.h  Flashlight.h  OxygenSystem.h  PlayerController.h  PlayerHUD.h
src/render/: Cubemap.h  Framebuffer.cpp  Framebuffer.h  GLUniform.h  ShaderLoader.cpp  ShaderLoader.h  ShadowMap.h
src/scene/: Camera.h  FishSchool.cpp  FishSchool.h  PalmMesh.h  Scene.cpp  Scene.h  SceneInternal.h  Scene_Props.cpp  Scene_Render.cpp  Scene_Terrain.cpp  SplinePath.h  VegetationSystem.cpp  VegetationSystem.h  WaterGrid.h  WaveField.h  Weather.h
tools/: check_asset_rendering_invariants.py  check_lod_visibility.py  check_no_caves.py  check_shore_foam_invariants.py  foam_preview.py
